# Newassignment

./: .dockerignore  .env.example  .gitignore  COMPLETION_CHECKLIST.md  DELIVERY_SUMMARY.md  DOCKER_README.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REVIEW_RESPONSE.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  start.sh  test_api.sh  test_approval_gates.py  validate_implementation.py
alembic/: env.py
app/: main.py
app/agents/: base.py  code.py  epic.py  research.py  spec.py  story.py  validation.py
app/api/v1/endpoints/: admin.py  auth.py  exports.py  projects.py  runs.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  artifact.py  epic.py  project.py  run.py  spec.py  story.py  traceability.py  user.py
app/schemas/: artifact.py  project.py  run.py  user.py
app/services/: agent_orchestrator.py  auth_service.py  project_service.py  run_service.py
app/utils/: export.py  mermaid.py  observability.py
tests/: conftest.py  test_auth.py  test_projects.py  test_runs.py
